--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^8.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
