--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
-VITE_BACKEND_HOST = http://localhost:5000
+VITE_BACKEND_HOST="http://localhost:5000"
+
+VITE_API_DOMAIN="https://satyr-holy-subtly.ngrok-free.app"
