--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuepic/vue-datepicker": "^8.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
